Fixed bug: hover hand icon activated on invisible burger menu; added new hover hand icon; deleted redundant svg file

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -50,3 +50,8 @@
   border-radius: 0.2rem;
   margin: 0 0.5rem;
 }
+
+.link:hover {
+  cursor: pointer;
+  cursor: url('/cursor-hand-icon.svg'), auto;
+}
