--- a/src/components/NavBar/Navbar.scss
+++ b/src/components/NavBar/Navbar.scss
@@ -28,6 +28,7 @@
   color: 	#ffffff;
   padding-bottom: 0.5rem;
   border-bottom: 1px solid;
+  cursor: url('/cursor-hand-icon.svg'), auto;
 }
 
 .desktopMenuBtn {
@@ -78,6 +79,7 @@
 .listItem:hover {
   cursor: pointer;
   color: #ffffff;
+  cursor: url('/cursor-hand-icon.svg'), auto;
 }
 
 .mobMenuIcon {
@@ -88,6 +90,7 @@
 
 .mobMenuIcon:hover {
   cursor: pointer;
+  cursor: url('/cursor-hand-icon.svg'), auto;
 }
 
 @media screen and (max-width:800px) {
